--- a/index.html
+++ b/index.html
@@ -12,44 +12,82 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Style CSS -->
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- Tailwind Coustom Style -->
+
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+                clifford: '#da373d',
+              'bike': '#E76F51',
+            },
+          },
+        },
+      };
+    </script>
   </head>
-  <body>
-    <header>
-        <nav>
-            <div class="navbar bg-base-100">
-  <div class="navbar-start">
-    <div class="dropdown">
-      <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
-      </div>
-      <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
-    <a class="btn btn-ghost text-xl">Biker Zone</a>
-  </div>
-  <div class="navbar-center hidden lg:flex">
-    <ul class="menu menu-horizontal px-1">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
-  </div>
-  <div class="navbar-end">
-    <a class="btn btn-error">Login</a>
-  </div>
-</div>
-        </nav>
+  <body class="font">
+    <header class="md:container md:mx-auto">
+      <nav>
+        <div class="navbar bg-base-100">
+          <div class="flex-1">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                  />
+                </svg>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content text-base mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
+              >
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </div>
+            <a class="btn btn-ghost text-4xl">Biker Zone</a>
+          </div>
+          <div class="navbar-center text-base hidden lg:flex">
+            <ul class="menu menu-horizontal px-1">
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="#">Shop</a></li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+          <div class="">
+            <a class="btn bg-bike text-white">LOGIN</a>
+          </div>
+        </div>
+      </nav>
     </header>
 
-
-    <main></main>
- 
+    <main class="md:container md:mx-auto"></main>
 
     <footer></footer>
-</body>
+  </body>
 </html>
