--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         theme: {
           extend: {
             colors: {
-                clifford: '#da373d',
-              'bike': '#E76F51',
-              'bike-bg': 'rgba(231, 111, 81, 0.10)',
+              clifford: "#da373d",
+              bike: "#E76F51",
+              "bike-bg": "rgba(231, 111, 81, 0.10)",
             },
           },
         },
@@ -70,7 +70,7 @@
                 <li><a href="#">Contact</a></li>
               </ul>
             </div>
-            <a class="btn btn-ghost text-4xl">Biker Zone</a>
+            <a class="btn btn-ghost text-base lg:text-4xl">Biker Zone</a>
           </div>
           <div class="navbar-center text-base hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
@@ -86,58 +86,179 @@
         </div>
       </nav>
 
-      <!-- Slider  -->
+      <!-- Slider  or Carosol -->
 
-      <div class="carousel w-full h-[550px] bg-bike-bg">
-
-
-  <div id="slide1" class="carousel-item relative w-full">
-    <div class="flex gap-15 p-24">
-        <div class="space-y-7 flex-1">
-            <h2 class="text-6xl font-bold flex-1">
-                Ride-on R15 V4 <br> with Smile
-            </h2>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
-             <button class="btn bg-bike text-white">Purchase</button>   
+      <div class="carousel w-full lg:h-[550px] bg-bike-bg">
+        <!-- Slider 1 -->
+        <div id="slide1" class="carousel-item relative w-full">
+          <div class="flex flex-col lg:flex-row gap-15 p-3 lg:p-24">
+            <div class="space-y-7 flex-1">
+              <h2 class="text-2xl lg:text-6xl font-bold flex-1">
+                Ride-on R15 V4 <br />
+                with Smile
+              </h2>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <button class="btn bg-bike text-white">Purchase</button>
+            </div>
+            <div>
+              <img src="images/slider/bike1.png" class="w-[400px]" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
         </div>
-        <div>
-            <img src="images/slider/bike1.png" class="w-[400px] " />
+
+        <!-- Sider 2 -->
+        <div id="slide2" class="carousel-item relative w-full">
+          <div class="flex flex-col lg:flex-row gap-15 p-3 lg:p-24">
+            <div class="space-y-7 flex-1">
+              <h2 class="text-2xl lg:text-6xl font-bold flex-1">
+                Ride-on R15 V4 <br />
+                with Smile
+              </h2>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <button class="btn bg-bike text-white">Purchase</button>
+            </div>
+            <div>
+              <img src="images/slider/bike2.png" class="w-[400px]" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
         </div>
-    </div>
-    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-      <a href="#slide4" class="btn btn-circle">❮</a> 
-      <a href="#slide2" class="btn btn-circle">❯</a>
-    </div>
-  </div> 
 
-  <div id="slide2" class="carousel-item relative w-full">
-    <img src="images/slider/bike2.png" class="w-full" />
-    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-      <a href="#slide1" class="btn btn-circle">❮</a> 
-      <a href="#slide3" class="btn btn-circle">❯</a>
-    </div>
-  </div> 
+        <!-- Slider 3 -->
+        <div id="slide3" class="carousel-item relative w-full">
+          <div class="flex flex-col lg:flex-row gap-15 p-3 lg:p-24">
+            <div class="space-y-7 flex-1">
+              <h2 class="text-2xl lg:text-6xl font-bold flex-1">
+                Ride-on R15 V4 <br />
+                with Smile
+              </h2>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <button class="btn bg-bike text-white">Purchase</button>
+            </div>
+            <div>
+              <img src="images/slider/bike3.png" class="w-[400px]" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide2" class="btn btn-circle">❮</a>
+            <a href="#slide4" class="btn btn-circle">❯</a>
+          </div>
+        </div>
 
-
-  <div id="slide3" class="carousel-item relative w-full">
-    <img src="images/slider/bike3.png" class="w-full" />
-    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-      <a href="#slide2" class="btn btn-circle">❮</a> 
-      <a href="#slide4" class="btn btn-circle">❯</a>
-    </div>
-  </div> 
-  <div id="slide4" class="carousel-item relative w-full">
-    <img src="images/slider/bike4.png" class="w-full" />
-    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-      <a href="#slide3" class="btn btn-circle">❮</a> 
-      <a href="#slide1" class="btn btn-circle">❯</a>
-    </div>
-  </div>
-</div>
-
+        <!-- Slider 4 -->
+        <div id="slide4" class="carousel-item relative w-full">
+          <div class="flex flex-col lg:flex-row gap-15 p-3 lg:p-24">
+            <div class="space-y-7 flex-1">
+              <h2 class="text-2xl lg:text-6xl font-bold flex-1">
+                Ride-on R15 V4 <br />
+                with Smile
+              </h2>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <button class="md:ml-1 btn bg-bike text-white">Purchase</button>
+            </div>
+            <div>
+              <img src="images/slider/bike4.png" class="w-[400px]" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide3" class="btn btn-circle">❮</a>
+            <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
     </header>
 
-    <main class="md:container md:mx-auto"></main>
+    <main class="md:container md:mx-auto">
+      <!-- Fetured Bikes In This Year -->
+      <section></section>
+
+      <!-- latest News -->
+
+      <section class="my-24">
+        <h3 class="text-4xl lg:text-5xl font-semibold text-center">Latest News</h3>
+        <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3"> 
+          <!-- Frist Cart -->
+          <div class="card m-2 p-2 w-45 lg:w-96 bg-base-100 shadow-xl">
+            <figure>
+              <img
+                src="images/others/latest1.png"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-2xl">Ducati XDIAVEL S-73</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions justify-end">
+                <button class="btn bg-bike text-white uppercase">Read More</button>
+              </div>
+            </div>
+          </div>
+
+                    <!-- Second Cart -->
+          <div class="card m-2 p-2 w-45 lg:w-96 bg-base-100 shadow-xl">
+            <figure>
+              <img
+                src="images/others/latest2.png"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-2xl">Ducati XDIAVEL S-73</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions justify-end">
+                <button class="btn bg-bike text-white uppercase">Read More</button>
+              </div>
+            </div>
+          </div>
+
+                    <!-- Third Cart -->
+          <div class="card m-2 p-2 w-45 lg:w-96 bg-base-100 shadow-xl">
+            <figure>
+              <img
+                src="images/others/latest3.png"
+                alt="Shoes"
+              />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-2xl">Ducati XDIAVEL S-73</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <div class="card-actions justify-end">
+                <button class="btn bg-bike text-white uppercase">Read More</button>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
