review sectin added

--- a/index.html
+++ b/index.html
@@ -202,58 +202,216 @@
       <!-- latest News -->
 
       <section class="my-24">
-        <h3 class="text-4xl lg:text-5xl font-semibold text-center">Latest News</h3>
-        <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3"> 
+        <h3 class="text-4xl lg:text-5xl font-semibold text-center">
+          Latest News
+        </h3>
+        <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
           <!-- Frist Cart -->
           <div class="card m-2 p-2 w-45 lg:w-96 bg-base-100 shadow-xl">
             <figure>
-              <img
-                src="images/others/latest1.png"
-                alt="Shoes"
-              />
+              <img src="images/others/latest1.png" alt="Shoes" />
             </figure>
             <div class="card-body">
               <h2 class="card-title text-2xl">Ducati XDIAVEL S-73</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
               <div class="card-actions justify-end">
-                <button class="btn bg-bike text-white uppercase">Read More</button>
+                <button class="btn bg-bike text-white uppercase">
+                  Read More
+                </button>
               </div>
             </div>
           </div>
 
-                    <!-- Second Cart -->
+          <!-- Second Cart -->
           <div class="card m-2 p-2 w-45 lg:w-96 bg-base-100 shadow-xl">
             <figure>
-              <img
-                src="images/others/latest2.png"
-                alt="Shoes"
-              />
+              <img src="images/others/latest2.png" alt="Shoes" />
             </figure>
             <div class="card-body">
               <h2 class="card-title text-2xl">Ducati XDIAVEL S-73</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
               <div class="card-actions justify-end">
-                <button class="btn bg-bike text-white uppercase">Read More</button>
+                <button class="btn bg-bike text-white uppercase">
+                  Read More
+                </button>
               </div>
             </div>
           </div>
 
-                    <!-- Third Cart -->
+          <!-- Third Cart -->
           <div class="card m-2 p-2 w-45 lg:w-96 bg-base-100 shadow-xl">
             <figure>
-              <img
-                src="images/others/latest3.png"
-                alt="Shoes"
-              />
+              <img src="images/others/latest3.png" alt="Shoes" />
             </figure>
             <div class="card-body">
               <h2 class="card-title text-2xl">Ducati XDIAVEL S-73</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
               <div class="card-actions justify-end">
-                <button class="btn bg-bike text-white uppercase">Read More</button>
+                <button class="btn bg-bike text-white uppercase">
+                  Read More
+                </button>
               </div>
             </div>
           </div>
+        </div>
+      </section>
+
+      <!-- Happy Clints -->
+      <section class="my-24">
+        <h3 class="text-3xl lg:text-5xl font-semibold text-center">
+          Happy <span class="text-bike">Clients says</span>
+        </h3>
+
+        <div class="grid lg:gap-10 mx-2 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+          <!-- Frist Review -->
+          <div class="card my-10 bg-base-100 p-5 border border-gray-300">
+            <figure>
+              <img class="w-36" src="images/others/user-1.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <p class="text-center">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="rating justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <div class="text-center space-y-3">
+                <h4 class="text-sm font-semibold text-info py-4">Regina Miles</h4>
+                <p class="pb-0">Banker</p>
+              </div>
+            </div>
+          </div>
+
+                    <!-- Second Review -->
+          <div class="card my-10 bg-base-100 p-5 border border-gray-300">
+            <figure>
+              <img class="w-36" src="images/others/user-2.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <p class="text-center">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="rating justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <div class="text-center space-y-3">
+                <h4 class="text-sm font-semibold text-info py-4">Regina Miles</h4>
+                <p class="pb-0">Banker</p>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+
+                    <!-- Frist Review -->
+          <div class="card my-10 bg-base-100 p-5 border border-gray-300">
+            <figure>
+              <img class="w-36" src="images/others/user-3.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <p class="text-center">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="rating justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <div class="text-center space-y-3">
+                <h4 class="text-sm font-semibold text-info py-4">Regina Miles</h4>
+                <p class="pb-0">Banker</p>
+              </div>
+            </div>
+          </div>
+
 
 
         </div>
