--- a/index.html
+++ b/index.html
@@ -271,7 +271,9 @@
           Happy <span class="text-bike">Clients says</span>
         </h3>
 
-        <div class="grid lg:gap-10 mx-2 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+        <div
+          class="grid lg:gap-10 mx-2 grid-cols-1 md:grid-cols-2 lg:grid-cols-3"
+        >
           <!-- Frist Review -->
           <div class="card my-10 bg-base-100 p-5 border border-gray-300">
             <figure>
@@ -311,13 +313,15 @@
                 />
               </div>
               <div class="text-center space-y-3">
-                <h4 class="text-sm font-semibold text-info py-4">Regina Miles</h4>
+                <h4 class="text-sm font-semibold text-info py-4">
+                  Regina Miles
+                </h4>
                 <p class="pb-0">Banker</p>
               </div>
             </div>
           </div>
 
-                    <!-- Second Review -->
+          <!-- Second Review -->
           <div class="card my-10 bg-base-100 p-5 border border-gray-300">
             <figure>
               <img class="w-36" src="images/others/user-2.png" alt="Shoes" />
@@ -356,18 +360,15 @@
                 />
               </div>
               <div class="text-center space-y-3">
-                <h4 class="text-sm font-semibold text-info py-4">Regina Miles</h4>
+                <h4 class="text-sm font-semibold text-info py-4">
+                  Regina Miles
+                </h4>
                 <p class="pb-0">Banker</p>
               </div>
             </div>
           </div>
 
-
-
-
-
-
-                    <!-- Frist Review -->
+          <!-- Frist Review -->
           <div class="card my-10 bg-base-100 p-5 border border-gray-300">
             <figure>
               <img class="w-36" src="images/others/user-3.png" alt="Shoes" />
@@ -406,18 +407,103 @@
                 />
               </div>
               <div class="text-center space-y-3">
-                <h4 class="text-sm font-semibold text-info py-4">Regina Miles</h4>
+                <h4 class="text-sm font-semibold text-info py-4">
+                  Regina Miles
+                </h4>
                 <p class="pb-0">Banker</p>
               </div>
             </div>
           </div>
+        </div>
+      </section>
 
+      <!-- FAQ Section -->
 
+      <section class="my-24">
+        <h3 class="text-3xl lg:text-5xl font-semibold text-center sm:my-10">
+          Frequently Asked <span class="text-bike">Questions</span>
+        </h3>
 
+        <div class="hero min-h-screen">
+          <div class="hero-content lg:gap-40 flex-col lg:flex-row">
+            <img class="w-43" src="images/others/faq.png" />
+            <div>
+              <div class="collapse collapse-arrow">
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium">
+                  What are the most important things I should know about riding
+                  a bike?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Safety First! Always obey the rules of the road. Obey all
+                    traffic signals, signs, and laws. Get in the mindset of
+                    “driving” your bike—not just “riding” your bike. This will
+                    help you be a more focused and legally compliant bike rider.
+                  </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  How can I tell if my helmet is old and I need a new one?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Quas, eum. Ratione voluptatem eveniet delectus tenetur,
+                    recusandae quas distinctio sed possimus corporis fugiat
+                    placeat saepe perferendis sit dolorem consequatur rem at?
+                  </p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  My bike has been in storage is it safe to ride?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Fuga, quaerat ducimus! Aspernatur perferendis, sapiente
+                    itaque quidem nemo illum reiciendis vel.
+                  </p>
+                </div>
+              </div>
+
+              <div class="collapse collapse-arrow">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">
+                  What rules should I follow when riding my bike?
+                </div>
+                <div class="collapse-content">
+                  <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Quas, eum. Ratione voluptatem eveniet delectus tenetur,
+                    recusandae quas distinctio sed possimus corporis fugiat
+                    placeat saepe perferendis sit dolorem consequatur rem at?
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
 
-    <footer></footer>
+    <!-- Footer Section is start here -->
+      <footer class="footer p-10 px-30 bg-neutral text-neutral-content justify-between ">
+        <aside>
+         
+          <p>ACME Industries Ltd.<br />Providing reliable tech since 1992</p>
+        </aside>
+        <nav>
+          <h6 class="footer-title">Social</h6>
+          <div class="grid grid-cols-1 gap-4">
+            <a><img class="w-36" src="images/others/android.png" alt=""></a>
+            <a><img class="w-36" src="images/others/ios.png" alt=""></a>
+          </div>
+        </nav>
+      </footer>
   </body>
 </html>
