--- a/index.html
+++ b/index.html
@@ -495,12 +495,12 @@
       <footer class="footer p-10 px-30 bg-neutral text-neutral-content justify-between ">
         <aside>
          
-          <p>ACME Industries Ltd.<br />Providing reliable tech since 1992</p>
+          <p class="mx-24">ACME Industries Ltd.<br />Providing reliable tech since 1992</p>
         </aside>
-        <nav>
+        <nav class="mx-24">
           <h6 class="footer-title">Social</h6>
           <div class="grid grid-cols-1 gap-4">
-            <a><img class="w-36" src="images/others/android.png" alt=""></a>
+            <a><img class="w-36 " src="images/others/android.png" alt=""></a>
             <a><img class="w-36" src="images/others/ios.png" alt=""></a>
           </div>
         </nav>
